--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "android/src/main/",
     "android/build.gradle",
     "dist/",
+    "src/",
     "ios/Plugin/",
     "NadlowebagenturCapacitorSipPhone.podspec"
   ],
